hphp/hack/test/typecheck/namespace_global_const2.php.exp
File "namespace_global_const2.php", line 11, characters 12-18:
Invalid return type (Typing[4110])
File "namespace_global_const2.php", line 10, characters 17-22:
Expected string
File "namespace_global_const2.php", line 8, characters 9-11:
But got int
