hphp/hack/test/typecheck/namespace_global_const2.php
<?hh

namespace {
  const string MYCONST = 'hi test';
}

namespace N {
  const int MYCONST = 1;

  function f(): string {
    return MYCONST;
  }
}
